--- a/app/src/main/res/layout/dialog_update_progress.xml
+++ b/app/src/main/res/layout/dialog_update_progress.xml
@@ -2,11 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-
-        <variable
-            name="project"
-            type="com.projectd.data.model.Project" />
-
         <variable
             name="loading"
             type="Boolean" />
@@ -34,6 +29,7 @@
             android:layout_marginHorizontal="16dp" />
 
         <Button
+            android:id="@+id/btn_update"
             style="@style/Theme.ProjectD.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
