--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -82,18 +82,18 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="12dp"
-            android:text="Progress 80%"
+            android:text='@{"Progress " + data.progress + "%"}'
             android:textColor="@color/text_bg_yellow"
             android:textSize="@dimen/text_small"
             android:textStyle="bold"
             tools:text="Progress 80%" />
 
         <ProgressBar
+            android:id="@+id/progress_bar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:progress='80' />
+            android:layout_marginHorizontal="12dp" />
 
         <HorizontalScrollView
             android:layout_width="match_parent"
