--- a/app/src/main/res/layout/item_user_not_ready.xml
+++ b/app/src/main/res/layout/item_user_not_ready.xml
@@ -44,7 +44,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text='@{"Last active: null"}'
+                android:text='@{data.devision}'
                 android:textColor="@color/brand_50"
                 android:textSize="@dimen/text_small"
                 tools:text="Aliando" />
