fix timeline, search project, notification action

--- a/app/src/main/res/layout/fragment_task_add.xml
+++ b/app/src/main/res/layout/fragment_task_add.xml
@@ -94,6 +94,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
+                        android:visibility="gone"
                         tools:visibility="visible">
 
                         <LinearLayout
@@ -149,6 +150,7 @@
                             android:layout_marginTop="12dp"
                             android:textColor="@color/text_red"
                             android:textSize="@dimen/text_small"
+                            android:text="@string/please_update_engineer_timeline"
                             tools:text="*Please update engineer timeline" />
 
                     </LinearLayout>
