fix notification update status, task chooser

--- a/app/src/main/res/layout/dialog_task_chooser.xml
+++ b/app/src/main/res/layout/dialog_task_chooser.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_project"
+                android:id="@+id/rv_task"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
@@ -37,6 +37,12 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:itemCount="3"
                 tools:listitem="@layout/item_task_chooser" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
 
             <LinearLayout
                 android:id="@+id/v_empty"
