--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -168,19 +168,19 @@
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:text='@{prayer.user}'
+                            android:text="@string/label_lestari_taman_media"
                             android:textColor="@color/text_bg_green"
                             android:textSize="@dimen/text_default"
                             android:textStyle="bold"
                             tools:text="Aliando Siswanto" />
 
                         <TextView
+                            android:id="@+id/prayer_description"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:text='@{prayer.description}'
                             android:textColor="@color/text_bg_green"
                             android:textSize="@dimen/text_small"
                             tools:text="Cerremony of heaven" />
