feat: - update new API - login & project done

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,7 +91,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="6dp"
-                                android:text='@{"(@" + user.shortName() +")"}'
+                                android:text='@{"(@" + user.oneName() +")"}'
                                 android:textColor="@color/text_default"
                                 android:textSize="@dimen/text_small"
                                 tools:text="\@aliando" />
@@ -138,7 +138,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_margin="4dp"
-                            app:imgCircleUrl='@{prayer.photo}'
+                            app:imgCircleUrl='@{prayer.userOwner.photo}'
                             android:contentDescription="@string/cd_prayer_reader_s_photo" />
 
                         <TextView
