--- a/app/src/main/res/layout/item_project_chooser.xml
+++ b/app/src/main/res/layout/item_project_chooser.xml
@@ -82,7 +82,7 @@
                     android:background="@drawable/bg_project_yellow"
                     android:paddingHorizontal="6dp"
                     android:paddingVertical="3dp"
-                    android:text='@{data.projectDirector}'
+                    android:text='@{data.projectDirector.name}'
                     android:textColor="@color/text_bg_yellow"
                     android:textSize="@dimen/text_smallest"
                     tools:text="Riki" />
