--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
-            android:text='@{"Created by @" + data.createdBy}'
+            android:text='@{"Created by @" + data.createdBy.name}'
             android:textColor="@color/text_bg_yellow"
             android:textSize="@dimen/text_small"
             tools:text="Created by Aliando" />
@@ -115,7 +115,7 @@
                     android:background="@drawable/bg_project_yellow"
                     android:paddingHorizontal="6dp"
                     android:paddingVertical="3dp"
-                    android:text='@{data.projectDirector}'
+                    android:text='@{data.projectDirector.name}'
                     android:textColor="@color/text_bg_yellow"
                     android:textSize="@dimen/text_smallest"
                     tools:text="Riki" />
