--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="data"
-            type="com.projectd.data.model.Task" />
+            type="com.projectd.data.model.TaskByDate" />
 
         <import type="android.view.View" />
     </data>
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
-            android:text="@{data.project}"
+            android:text="@{data.projectDetail.projectName}"
             android:textColor="@color/text_bg_green"
             android:textSize="@dimen/text_small"
             android:textStyle="bold"
@@ -69,7 +69,7 @@
             android:text='@{"Verified by " + data.verifiedBy}'
             android:textColor="@color/text_bg_green"
             android:textSize="@dimen/text_smallest"
-            android:visibility='@{data.verified.contains("0") ? View.GONE : View.VISIBLE}'
+            android:visibility='@{data.verified == null ? View.GONE : View.VISIBLE}'
             app:drawableStartCompat="@drawable/ic_baseline_verified_24"
             app:drawableTint="@color/text_bg_green"
             tools:text="Verified by Aliando" />
