--- a/app/src/main/res/layout/fragment_task_pov.xml
+++ b/app/src/main/res/layout/fragment_task_pov.xml
@@ -95,6 +95,12 @@
 
             </FrameLayout>
 
+            <ProgressBar
+                android:id="@+id/iv_loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_task"
                 android:layout_width="match_parent"
